Adding image gallery

--- a/pictureGallery.html
+++ b/pictureGallery.html
@@ -1,21 +1,66 @@
 <html>
 <head>
 	<title>Picture Gallery</title>
+
+	  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h2>My top 12 favorite pictures of 2016</h2>
 
 <div id="container">
-
+<div class="row">
+	<div class="col-md-4">
+	<div class="thumbnail">
 <img src="http://i1076.photobucket.com/albums/w451/ktompky7/63c703e5-2458-4bae-a333-4a9e135b73e9_zps20daljuf.jpg" border="0" alt=" photo 63c703e5-2458-4bae-a333-4a9e135b73e9_zps20daljuf.jpg"/>
+<div class="caption">
+	<p>A very photogenic cat</p>
+</div>
+</div>
+</div>
 
+
+
+	<div class="col-md-4">
+	<div class="thumbnail">
 <img src="http://i1076.photobucket.com/albums/w451/ktompky7/sky_zpsxnzaw0gd.jpg" border="0" alt=" photo sky_zpsxnzaw0gd.jpg"/>
+<div class="caption">
+	<p>Beautiful summer day</p>
+</div>
+</div>
+</div>
 
-<img src="http://i1076.photobucket.com/albums/w451/ktompky7/park_zpsiodi6qfb.jpg" border="0" alt="St. Edwards photo park_zpsiodi6qfb.jpg"/>
+<div class="col-md-4">
+	<div class="thumbnail">
+<img src="http://i1076.photobucket.com/albums/w451/ktompky7/park_zpsiodi6qfb.jpg" border="0" alt="St. Edwards photo park_zpsiodi6qfb.jpg" style="height: 343px; width: 514px;"/>
+<div class="caption">
+	<p>Waiting on a rainy day</p>
+</div>
+</div>
+</div>
 
+
+</div> <!--to end the row-->
+
+<div class="row">
+<div class="col-md-4">
+	<div class="thumbnail">
 <img src="http://i1076.photobucket.com/albums/w451/ktompky7/dog2_zpskoz0ehvi.jpg" border="0" alt=" photo dog2_zpskoz0ehvi.jpg"/>
+<div class="caption">
+	<p>Hot dog</p>
+</div>
+</div>
+</div>
 
-	</div>
+
+</div>
+</div>
+	
 </body>
 </html>
