Updating image gallery with more pics

--- a/pictureGallery.html
+++ b/pictureGallery.html
@@ -5,9 +5,9 @@
 	  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -18,7 +18,7 @@
 <div class="row">
 	<div class="col-md-4">
 	<div class="thumbnail">
-<img src="http://i1076.photobucket.com/albums/w451/ktompky7/63c703e5-2458-4bae-a333-4a9e135b73e9_zps20daljuf.jpg" border="0" alt=" photo 63c703e5-2458-4bae-a333-4a9e135b73e9_zps20daljuf.jpg"/>
+<img src="Images/cat2-min.JPG"/>
 <div class="caption">
 	<p>A very photogenic cat</p>
 </div>
@@ -29,7 +29,7 @@
 
 	<div class="col-md-4">
 	<div class="thumbnail">
-<img src="http://i1076.photobucket.com/albums/w451/ktompky7/sky_zpsxnzaw0gd.jpg" border="0" alt=" photo sky_zpsxnzaw0gd.jpg"/>
+<img src="Images/sky-min.JPG"/>
 <div class="caption">
 	<p>Beautiful summer day</p>
 </div>
@@ -38,7 +38,7 @@
 
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="http://i1076.photobucket.com/albums/w451/ktompky7/park_zpsiodi6qfb.jpg" border="0" alt="St. Edwards photo park_zpsiodi6qfb.jpg" style="height: 343px; width: 514px;"/>
+<img src="Images/park-min.jpg" style="height: 343px; width: 514px;"/>
 <div class="caption">
 	<p>Waiting on a rainy day</p>
 </div>
@@ -51,13 +51,30 @@
 <div class="row">
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="http://i1076.photobucket.com/albums/w451/ktompky7/dog2_zpskoz0ehvi.jpg" border="0" alt=" photo dog2_zpskoz0ehvi.jpg"/>
+<img src="Images/dog2-min.JPG"/>
 <div class="caption">
 	<p>Hot dog</p>
 </div>
 </div>
 </div>
 
+<div class="col-md-4">
+	<div class="thumbnail">
+<img src="Images/beach-min.jpg" style="height: 343px; width: 514px;"/>
+<div class="caption">
+	<p>Summer days</p>
+</div>
+</div>
+</div>
+
+<div class="col-md-4">
+	<div class="thumbnail">
+<img src="Images/water-min.JPG"/>
+<div class="caption">
+	<p>Graceful</p>
+</div>
+</div>
+</div>
 
 </div>
 </div>
