--- a/pictureGallery.html
+++ b/pictureGallery.html
@@ -12,7 +12,8 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h2>My top 12 favorite pictures of 2016</h2>
+	<!--commenting out because I don't have 12 pictures up yet. :p
+<h2>My top 12 favorite pictures of 2016</h2>-->
 
 <div id="container">
 <div class="row">
