adding css to pages

--- a/Dango.html
+++ b/Dango.html
@@ -9,7 +9,9 @@
 
 
 
-  <h1>だんご大家族<h1>
+  <h3>だんご大家族</h3>
+ 
+  <p> Using just CSS, recreated the dango characters from a popular anime, Clannad.</p>
 <div id="heart"></div>
 <div class="flex-container">
   <!--leaving wrapper id in case it doesn't look great on other browsers--> 
