--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <br>
     <h2>I'm Kelly, a web developer.</h2>
     <p>Resident of Austin, Texas. Proud owner of two cats. I am passionate about web and self development. If I'm not at home learning all I can about new technologies or coding, you'll find me at the local gym, seeing what new live music Austin has in store, or trying out a new craft beer at a brewery.</p>
+
+    <p><i class="fa fa-html5" aria-hidden="true"></i><i class="fa fa-css3" aria-hidden="true"></i></p>
     
 
     
