--- a/pictureGallery.html
+++ b/pictureGallery.html
@@ -39,9 +39,9 @@
 
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/park-min.jpg" style="height: 343px; width: 514px;"/>
+<img src="Images/dog-min.JPG"/>
 <div class="caption">
-	<p>Waiting on a rainy day</p>
+	<p>Waiting</p>
 </div>
 </div>
 </div>
@@ -61,7 +61,7 @@
 
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/beach-min.jpg" style="height: 343px; width: 514px;"/>
+<img src="Images/flower-min.jpg"/>
 <div class="caption">
 	<p>Summer days</p>
 </div>
@@ -79,6 +79,6 @@
 
 </div>
 </div>
-	
+
 </body>
 </html>
