--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <link rel="stylesheet" href="style.css">
 
    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 
    <!--to use the glyphicons that don't normally exist in bootstrap-->
   <script src="https://use.fontawesome.com/2c485ccefc.js"></script>
@@ -21,31 +22,32 @@
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-<nav class="navbar navbar-default navbar-fixed-top">
-<div class="navbar-header">
-<a class="navbar-brand" href="#"></a>
-</div>
-<ul class="nav navbar-nav navbar-center">
 
-<li class="active"><a href="#About">About</a></li>
-<li class="active"><a href="#Portfolio">Portfolio</a></li>
-<li class="active"><a href="#contactMe">Contact</a></li>
-</ul>
+<div class="row">
+  <div class="col-sm-1">
+<img src="Images/blackcat.png">
 </div>
-</nav>
+<div class="col-sm-3">
+  <p>Home</p>
+</div>
+<div class="col-sm-3">
+  <p>About me</p>
+</div>
+<div class="col-sm-3">
+  <p>Contact me</p>
+</div>
+<div class="col-sm-2">
+</div>
+</div>
+
 
 <div id="About" class="container-fluid">
 <div class="container">
-  <div style="background:transparent !important" class="jumbotron">
 
-    <h1>Hey!</h1>
-    <br>
-    <img id="headshot" src="Images/Headshot.jpg" style="width: 110px; height: 110px;">
-    <br>
-    <h2>I'm Kelly, a web developer.</h2>
-    <p>Resident of Austin, Texas. Proud owner of two cats. I am passionate about web and self development. If I'm not at home learning all I can about new technologies or coding, you'll find me at the local gym, seeing what new live music Austin has in store, or trying out a new craft beer at a brewery.</p>
 
-    <p><i class="fa fa-html5" aria-hidden="true"></i><i class="fa fa-css3" aria-hidden="true"></i></p>
+
+    <h1>I'm Kelly Tompkins, a web developer.</h1>
+
 
 
 
@@ -53,58 +55,56 @@
   </div>
 
     <div id="Portfolio" class="container-fluid">
-<h3>Image Gallery</h3>
-  <p>Using Bootstrap, I created a responsive image gallery filled with pictures that I have taken with a Nikon D3300.</p>
+
   <div class="row">
     <div class="col-sm-4">
-      <a href="pictureGallery.html"><img src="Images/cat2-min.JPG" class="img-thumbnail"/></a>
+      <h3>Animals</h3>
+      <a href="pictureGallery.html"><img src="Images/Animals/cat2-min.JPG" class="img-thumbnail"/></a>
     </div>
     <div class="col-sm-4">
-    
-      <a href="pictureGallery.html"><img src="Images/cat2-min.JPG" class="img-thumbnail"/></a>
+      <h3>Podcasting</h3>
+      <a href="pictureGallery.html"><img src="Images/Austin/podcast-min.jpg" class="img-thumbnail"/></a>
 
     </div>
     <div class="col-sm-4">
-      <a href="pictureGallery.html"><img src="Images/cat2-min.JPG" class="img-thumbnail"/></a>
+      <h3>Hiking</h3>
+      <a href="pictureGallery.html"><img src="Images/Outdoor/DSC_0529.jpg" class="img-thumbnail"/></a>
     </div>
   </div>
+
+    <h3>Code Pen Snippets</h3>
      <div class="row">
        <div class="col-sm-4">
+         <p data-height="265" data-theme-id="0" data-slug-hash="zNOZvp" data-default-tab="css,result" data-user="mysterymeer" data-embed-version="2" data-pen-title="Silent Hill" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/mysterymeer/pen/zNOZvp/">Silent Hill</a> by Kelly Tompkins (<a href="https://codepen.io/mysterymeer">@mysterymeer</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
        </div>
     <div class="col-sm-4">
-      <h3>CSS Projects</h3>
-      <p><a href="Dango.html"></a></span><BR>
-      <p>Using just CSS, I recreated Dangos from a popular anime, Clannad.</p>
-      </p>
+      <p data-height="265" data-theme-id="0" data-slug-hash="gLOBYB" data-default-tab="result" data-user="mysterymeer" data-embed-version="2" data-pen-title="Dango" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/mysterymeer/pen/gLOBYB/">Dango</a> by Kelly Tompkins (<a href="https://codepen.io/mysterymeer">@mysterymeer</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+    </div>
+      <div class="col-sm-4">
+        <p data-height="265" data-theme-id="0" data-slug-hash="XNrqQM" data-default-tab="result" data-user="mysterymeer" data-embed-version="2" data-pen-title="Welcome to night vale quotes" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/mysterymeer/pen/XNrqQM/">Welcome to night vale quotes</a> by Kelly Tompkins (<a href="https://codepen.io/mysterymeer">@mysterymeer</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
+      </div>
+
+
+
       </div>
     </div>
 
 
 
-<div id="contactMe">
-  <h1>Say hello!</h1>
 
-<form action="mailto:k.tompkins005@gmail.com" method="post" enctype="text/plain">
-Name:<br>
-<input type="text" name="name"><br>
-E-mail:<br>
-<input type="text" name="mail"><br>
-Comment:<br>
-<input type="text" name="text" size="50"><br><br>
-<input type="submit" value="Send">
-<input type="reset" value="Reset">
-</form>
+
+
+
+
+
+
+
+
 </div>
-
-
-
- <footer class="container-fluid">
-
 <div class="row">
-
-
-
-</div>
 <div class="col-md-4">
 </div>
 
