Added text to index

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="row">
   <div class="col-sm-1">
-<img src="Images/blackcat.png">
+<span id='cat'><img src="Images/blackcat.png"></span>
 </div>
 <div class="col-sm-3">
   <p>Home</p>
