--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
     </div>
     <div class="col-sm-4">
       <h3>Podcasting</h3>
-      <a href="pictureGallery.html"><img src="Images/Austin/podcast-min.jpg" class="img-thumbnail"/></a>
+      <a href="pictureGallery.html"><img src="Images/Austin/podcast-min.JPG" class="img-thumbnail"/></a>
 
     </div>
     <div class="col-sm-4">
       <h3>Hiking</h3>
-      <a href="pictureGallery.html"><img src="Images/Outdoor/DSC_0529.jpg" class="img-thumbnail"/></a>
+      <a href="pictureGallery.html"><img src="Images/Outdoor/DSC_0529.JPG" class="img-thumbnail"/></a>
     </div>
   </div>
 
