--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel="stylesheet" href="style.css">
 
    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 
    <!--to use the glyphicons that don't normally exist in bootstrap-->
   <script src="https://use.fontawesome.com/2c485ccefc.js"></script>
@@ -25,7 +25,7 @@
 
 <div class="row">
   <div class="col-sm-1">
-<img src="Images/blackcat.png">
+<span id='cat'><img src="Images/blackcat.png"></span>
 </div>
 <div class="col-sm-3">
   <p>Home</p>
@@ -63,12 +63,12 @@
     </div>
     <div class="col-sm-4">
       <h3>Podcasting</h3>
-      <a href="pictureGallery.html"><img src="Images/Austin/podcast-min.jpg" class="img-thumbnail"/></a>
+      <a href=""><img src="Images/Austin/podcast-min.JPG" class="img-thumbnail"/></a>
 
     </div>
     <div class="col-sm-4">
       <h3>Hiking</h3>
-      <a href="pictureGallery.html"><img src="Images/Outdoor/DSC_0529.jpg" class="img-thumbnail"/></a>
+      <a href=""><img src="Images/Outdoor/DSC_0529.JPG" class="img-thumbnail"/></a>
     </div>
   </div>
 
