Correcting Image links

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <div class="row">
     <div class="col-sm-4">
-      <h3>Animals</h3>
+      <h3>Photography</h3>
       <a href="pictureGallery.html"><img src="Images/Animals/cat2-min.JPG" class="img-thumbnail"/></a>
     </div>
     <div class="col-sm-4">
