--- a/pictureGallery.html
+++ b/pictureGallery.html
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/cat2-min.JPG"/>
+<img src="Images/Animals/cat2-min.JPG"/>
 <div class="caption">
 	<p>A very photogenic cat</p>
 </div>
@@ -30,7 +30,7 @@
 
 	<div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/sky-min.JPG"/>
+<img src="Images/Outdoor/sky-min.JPG"/>
 <div class="caption">
 	<p>Beautiful summer day</p>
 </div>
@@ -39,7 +39,7 @@
 
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/dog-min.JPG"/>
+<img src="Images/Animals/dog-min.JPG"/>
 <div class="caption">
 	<p>Waiting</p>
 </div>
@@ -52,7 +52,7 @@
 <div class="row">
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/dog2-min.JPG"/>
+<img src="Images/Animals/dog2-min.JPG"/>
 <div class="caption">
 	<p>Hot dog</p>
 </div>
@@ -61,7 +61,7 @@
 
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/flower-min.jpg"/>
+<img src="Images/Outdoor/flower-min.jpg"/>
 <div class="caption">
 	<p>Summer days</p>
 </div>
@@ -70,9 +70,9 @@
 
 <div class="col-md-4">
 	<div class="thumbnail">
-<img src="Images/water-min.JPG"/>
+<img src="Images/Outdoor/road-min.JPG"/>
 <div class="caption">
-	<p>Graceful</p>
+	<p>Summer days</p>
 </div>
 </div>
 </div>
