--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--<body data-spy="scroll" data-target=".navbar" data-offset="50">-->
+
   <title>Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,33 +12,19 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
    <link rel="stylesheet" href="style.css">
-
+<!--to import google fonts-->
    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 
-   <!--to use the glyphicons that don't normally exist in bootstrap-->
-  <script src="https://use.fontawesome.com/2c485ccefc.js"></script>
+
+<!--To get font icons that don't exit in bootstrap-->
+   <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+
+<script src="arrow.js"></script>
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
-
-<div class="row">
-  <div class="col-sm-1">
-<span id='cat'><img src="Images/blackcat.png"></span>
-</div>
-<div class="col-sm-3">
-  <p>Home</p>
-</div>
-<div class="col-sm-3">
-  <p>About me</p>
-</div>
-<div class="col-sm-3">
-  <p>Contact me</p>
-</div>
-<div class="col-sm-2">
-</div>
-</div>
 
 
 <div id="About" class="container-fluid">
@@ -46,7 +32,9 @@
 
 
 
-    <h1>I'm Kelly Tompkins, a web developer.</h1>
+    <h1>I'm Kelly Tompkins, a python developer.</h1>
+    <div class='arrow'><h3>Scroll down for more</h3>
+    <p class='downArrow'><i class="fas fa-angle-down"></i></p></div>
 
 
 
@@ -71,25 +59,10 @@
       <a href=""><img src="Images/Outdoor/DSC_0529.JPG" class="img-thumbnail"/></a>
     </div>
   </div>
+</div>
 
-    <h3>Code Pen Snippets</h3>
-     <div class="row">
-       <div class="col-sm-4">
-         <p data-height="265" data-theme-id="0" data-slug-hash="zNOZvp" data-default-tab="css,result" data-user="mysterymeer" data-embed-version="2" data-pen-title="Silent Hill" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/mysterymeer/pen/zNOZvp/">Silent Hill</a> by Kelly Tompkins (<a href="https://codepen.io/mysterymeer">@mysterymeer</a>) on <a href="https://codepen.io">CodePen</a>.</p>
-<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
-       </div>
-    <div class="col-sm-4">
-      <p data-height="265" data-theme-id="0" data-slug-hash="gLOBYB" data-default-tab="result" data-user="mysterymeer" data-embed-version="2" data-pen-title="Dango" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/mysterymeer/pen/gLOBYB/">Dango</a> by Kelly Tompkins (<a href="https://codepen.io/mysterymeer">@mysterymeer</a>) on <a href="https://codepen.io">CodePen</a>.</p>
-<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
-    </div>
-      <div class="col-sm-4">
-        <p data-height="265" data-theme-id="0" data-slug-hash="XNrqQM" data-default-tab="result" data-user="mysterymeer" data-embed-version="2" data-pen-title="Welcome to night vale quotes" data-preview="true" class="codepen">See the Pen <a href="https://codepen.io/mysterymeer/pen/XNrqQM/">Welcome to night vale quotes</a> by Kelly Tompkins (<a href="https://codepen.io/mysterymeer">@mysterymeer</a>) on <a href="https://codepen.io">CodePen</a>.</p>
-<script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
-      </div>
+<div id="game" class="container-fluid">
 
-
-
-      </div>
     </div>
 
 
