--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
   </div>
   </div>
 
+      <div id="Portfolio" class="container-fluid">
+
+    <div class="row">
+      <div class="col-sm-4">
+
+
+      </div>
+      <div class="col-sm-4">
+
+
+
+      </div>
+      <div class="col-sm-4">
+        
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <div id="Portfolio" class="container-fluid">
 
   <div class="row">
