Adding an about me section and place for my image

--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
     <div class="row">
 
       <div class="col-sm-6">
+        <h3>About me</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer condimentum placerat sem, vel aliquam ante elementum pretium. Quisque sollicitudin neque velit, in pharetra turpis venenatis eget. Duis a iaculis justo, ut pulvinar felis. Ut efficitur aliquet mi vel cursus. Sed euismod, justo id sodales luctus, orci erat dapibus odio, quis porttitor mauris urna sed massa. Morbi suscipit ligula blandit sapien varius sagittis. Duis aliquam nunc metus, ut venenatis lectus dapibus vitae. In hac habitasse platea dictumst. Integer pretium, nunc et fermentum dignissim, risus dui dapibus erat, ut cursus turpis quam eu orci. In nec suscipit quam. Suspendisse pellentesque fermentum dui, ultrices gravida erat dapibus eget. Proin hendrerit libero sed lorem viverra, non sollicitudin eros bibendum. Nunc posuere enim tristique justo dictum tempor. Curabitur at dolor eget ipsum suscipit sollicitudin vitae ut augue. Mauris scelerisque ipsum nec volutpat cursus.</p>
       </div>
 
       <div class="col-sm-6">
+        <h3> This is where the image of me will go.</h3>
       </div>
 
 
@@ -76,15 +79,17 @@
       <div class="col-sm-4">
         <h3>Photography</h3>
         <a href="pictureGallery.html"><img src="Images/Animals/cat2-min.JPG" class="img-thumbnail"/></a>
+        <p>Click on the cat to see an image gallery with a few pictures that I took that I love.</p>
       </div>
       <div class="col-sm-4">
         <h3>Podcasting</h3>
-        <a href=""><img src="Images/Austin/podcast-min.JPG" class="img-thumbnail"/></a>
-
+        <a href="#"><img src="Images/Austin/podcast-min.JPG" class="img-thumbnail"/></a>
+        <p>Coming soon</p>
       </div>
       <div class="col-sm-4">
         <h3>Hiking</h3>
-        <a href=""><img src="Images/Outdoor/DSC_0529.JPG" class="img-thumbnail"/></a>
+        <a href="#"><img src="Images/Outdoor/DSC_0529.JPG" class="img-thumbnail"/></a>
+        <p>Coming soon</p>
       </div>
     </div>
   </div>
@@ -99,19 +104,20 @@
 
 
   </div>
+  <div class= 'footer'>
   <div class="row">
     <div class="col-md-4">
     </div>
 
     <div class="col-md-4">
-      Copyright © 2017 Kelly Tompkins
+      <p>Copyright © 2017 Kelly Tompkins</p>
 
     </div>
     <div class="col-md-4">
     </div>
 
   </div>
-  </footer>
+</div>
 
 
 
