Adding different background picture

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
   <title>Portfolio</title>
@@ -11,85 +11,96 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-   <link rel="stylesheet" href="style.css">
-<!--to import google fonts-->
-   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <!--to import google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
 
 
-<!--To get font icons that don't exit in bootstrap-->
-   <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
+  <!--To get font icons that don't exit in bootstrap-->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
 
-<script src="arrow.js"></script>
+  <script src="arrow.js"></script>
 
 </head>
+
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
 
 
-
-<div id="About" class="container-fluid">
-<div class="container">
-
-
-
-    <h1>I'm Kelly Tompkins, a python developer.</h1>
-    <div class='arrow'><h3>Scroll down for more</h3>
-    <p class='downArrow'><i class="fas fa-angle-down"></i></p></div>
-
-
-
-
-  </div>
-  </div>
-
-    <div id="Portfolio" class="container-fluid">
-
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>Photography</h3>
-      <a href="pictureGallery.html"><img src="Images/Animals/cat2-min.JPG" class="img-thumbnail"/></a>
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#"> </a>
     </div>
-    <div class="col-sm-4">
-      <h3>Podcasting</h3>
-      <a href=""><img src="Images/Austin/podcast-min.JPG" class="img-thumbnail"/></a>
+    <ul class="nav navbar-nav navbar-center">
 
+      <li class="active"><a href="#About">About</a></li>
+      <li class="active"><a href="#Portfolio">Portfolio</a></li>
+      <li class="active"><a href="#Contactme">Contact</a></li>
+    </ul>
     </div>
-    <div class="col-sm-4">
-      <h3>Hiking</h3>
-      <a href=""><img src="Images/Outdoor/DSC_0529.JPG" class="img-thumbnail"/></a>
+  </nav>
+
+
+
+  <div id="About" class="container-fluid">
+    <div class="container">
+
+
+
+      <h1>I'm Kelly Tompkins, a python developer.</h1>
+      <div class='arrow'>
+        <h3>Scroll down for more</h3>
+        <p class='downArrow'><i class="fas fa-angle-down"></i></p>
+      </div>
+
+
+
+
     </div>
   </div>
-</div>
 
-<div id="game" class="container-fluid">
+  <div id="Portfolio" class="container-fluid">
 
+    <div class="row">
+      <div class="col-sm-4">
+        <h3>Photography</h3>
+        <a href="pictureGallery.html"><img src="Images/Animals/cat2-min.JPG" class="img-thumbnail"/></a>
+      </div>
+      <div class="col-sm-4">
+        <h3>Podcasting</h3>
+        <a href=""><img src="Images/Austin/podcast-min.JPG" class="img-thumbnail"/></a>
+
+      </div>
+      <div class="col-sm-4">
+        <h3>Hiking</h3>
+        <a href=""><img src="Images/Outdoor/DSC_0529.JPG" class="img-thumbnail"/></a>
+      </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
-<div class="row">
-<div class="col-md-4">
-</div>
-
-  <div class="col-md-4">
-Copyright © 2017 Kelly Tompkins
-
-</div>
-<div class="col-md-4">
   </div>
 
-</div>
-</footer>
+  <div id="game" class="container-fluid">
+
+  </div>
+
+
+
+  <div id="socialmedia">
+    <h4>You can also find me here!</h4>
+
+    <a class='navLink' href="https://www.linkedin.com/in/ktompkins005/" alt="Linkedin"><i class="fab fa-linkedin-in"></i></a>
+
+    <a class='navLink' href="https://github.com/ktompky" alt="github"><i class="fab fa-github-alt"></i></a>
+
+    <a class='navLink' href="https://www.pinterest.com/msmeer/" alt="pinterest"><i class="fab fa-pinterest-p"></i></a>
+
+    <a class='navLink' href="http://steamcommunity.com/id/missmeer" alt="steam"><i class="fab fa-steam"></i></a>
+
+    <h5>Copyright © 2018 Kelly Tompkins</h5>
+  </div>
+
+
+
+
 
 
 
@@ -97,4 +108,5 @@ Copyright © 2017 Kelly Tompkins
 
 
 </body>
+
 </html>
