Adding the header with my name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
   <div class="container-fluid">
-<nav class="w3-sidenav w3-pale-yellow" style="width:70px">
+<nav class="w3-sidenav w3-gray" style="width:70px">
   <a href="#"><i class="fas fa-home"></i>Home</a>
   <a href="#"><i class="fas fa-female"></i></i>About me</a>
   <a href="#"><i class="fas fa-chart-pie"></i></i>Skills</a>
@@ -44,9 +44,10 @@
 
 <div id="container">
 </div>
-
+  <!--<img src="Images/Headshot.jpg" alt='headshot' height="150px" width="120px">-->
 
 <div class="innerContainer">
+  <h3>Hello, my name is Kelly Tompkins.</h3>
   <p>Lorem ipsum dolor sit amet, dicam eloquentiam ei pri. An velit ullamcorper mel, praesent iudicabit cu nec. Nominavi praesent omittantur ne est, porro mazim vituperata vis ne. Ex qui alterum sanctus intellegam, utroque moderatius vix id, eirmod efficiantur ex eam. An eam mundi luptatum, mutat consulatu vis eu.</p>
   <p>His augue clita debitis eu, impedit propriae scriptorem ut mei. Ei ius partem sadipscing, mea error animal ex, mei modus partiendo reprimique in. Gubergren consequat at pro. Antiopam persequeris mea ea, eos ut temporibus appellantur, sit ferri primis disputando eu.
   </p>
